Fix the width and overflow of confidence options

--- a/src/scss/common/button.scss
+++ b/src/scss/common/button.scss
@@ -11,7 +11,6 @@
   &.btn-negative, &.btn-neutral, &.btn-positive, &.btn-negative-answer, &.btn-neutral-answer, &.btn-positive-answer {
     border: 1px solid transparent;
     color: $black;
-    width: 100px !important;
     min-width: 100px !important;
     padding: 0 !important;
     border-radius: 5px;
